# ogx

./: .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  README.md  pyproject.toml
.github/actions/setup-ollama/: action.yml
.github/actions/setup-test-environment/: action.yml
.github/scripts/: update_constraint_deps.py
.github/workflows/: README.md  backward-compat.yml  codeql.yml  commit-constraint-updates.yml  dependabot-constraints.yml  file-processors-tests.yml  integration-auth-tests.yml  integration-responses-conversations-auth-tests.yml  integration-sql-store-tests.yml  integration-tests.yml  integration-vector-io-tests.yml  record-integration-tests.yml
benchmarking/k8s-benchmark/: apply.sh  stack-configmap.yaml  stack-k8s.yaml.template  stack_run_config.yaml
benchmarking/rag/: config.yaml  start_stack.sh
benchmarking/vertical-scaling/: run-benchmark.sh
client-sdks/stainless/: config.yml  openapi.yml
docs/: README.md  docusaurus.config.ts  getting_started.ipynb  getting_started_ogx_api.ipynb  sidebars.ts
docs/adrs/: 0001-gateway-first-architecture.md  original_rfc.md
docs/blog/: 2026-01-30-how-to-get-started.md  2026-03-01-building-agentic-flows.md  2026-03-20-open-responses-openai-compatibility.md  2026-03-30-observability.md  2026-04-06-mlflow-observability.md  2026-05-11-consistent-agentic-api-layer.md  2026-05-12-ogx-v1.md
docs/docs/: api-overview.mdx  index.mdx
docs/docs/api-anthropic-messages/: conformance.mdx
docs/docs/api-google-interactions/: conformance.mdx
docs/docs/api-openai/: conformance.mdx  provider_matrix.md  responses-flow.mdx
docs/docs/building_applications/: agent.mdx  agent_execution_loop.mdx  claude_code_integration.mdx  codex_cli_integration.mdx  index.mdx  playground.mdx  rag.mdx  responses_vs_agents.mdx  telemetry.mdx  tools.mdx
docs/docs/concepts/: architecture.mdx  distributions.mdx  evaluation_concepts.mdx  index.mdx  resources.mdx
docs/docs/contributing/: new_api_provider.mdx
docs/docs/distributions/: building_distro.mdx  configuration.mdx  list_of_distributions.mdx  starting_ogx_server.mdx
docs/docs/getting_started/: detailed_tutorial.mdx  quickstart.mdx
docs/docs/providers/: index.mdx  openai_responses_limitations.mdx
docs/docs/references/: ogx_client_cli_reference.md
docs/notebooks/: responses-api-agent-migration.ipynb
docs/notebooks/crewai/: Llama_Stack_CrewAI.ipynb
docs/notebooks/langchain/: Llama_Stack_LangChain.ipynb
docs/releases/: RELEASE_NOTES_1.0.md
docs/src/css/: custom.css
docs/src/pages/: index.js  index.module.css
docs/static/: anthropic-coverage.json  deprecated-ogx-spec.yaml  experimental-ogx-spec.yaml  google-interactions-coverage.json  ogx-spec.yaml  openai-coverage.json  openai-responses-drift.json  openresponses-spec.json  stainless-ogx-spec.yaml
docs/supplementary/experimental/: agents-api.md
docs/supplementary/stable/: agents-api.md
docs/zero_to_hero_guide/: 04_Tool_Calling101.ipynb  README.md
scripts/: check_openai_responses_drift.py  docker.sh  google_interactions_coverage.py  integration-responses-conversations-auth-tests.sh  integration-tests.sh  openai_coverage.py  test_interactions_api.py
scripts/openapi_generator/: _legacy_order.py  code_samples.py  main.py  multi_sdk.py  multipart_transforms.py  schema_transforms.py
scripts/openapi_generator/stainless_config/: generate_config.py
scripts/telemetry/: README.md
src/ogx/: README.md  log.py
src/ogx/core/: README.md  admin.py  build.py  client.py  configure.py  datatypes.py  distribution.py  library_client.py  resolver.py  stack.py  start_stack.sh
src/ogx/distributions/: README.md  template.py
src/ogx/providers/: README.md
src/ogx/telemetry/: constants.py
src/ogx/testing/: api_recorder.py
src/ogx_api/: README.md  __init__.py  datatypes.py  openai_responses.py  pyproject.toml  resource.py  schema_utils.py
src/ogx_api/admin/: api.py  fastapi_routes.py
src/ogx_api/common/: errors.py  responses.py  upload_limits.py
src/ogx_api/connectors/: __init__.py
src/ogx_api/conversations/: api.py  fastapi_routes.py  models.py
src/ogx_api/file_processors/: fastapi_routes.py
src/ogx_api/files/: __init__.py  fastapi_routes.py  models.py
src/ogx_api/inference/: __init__.py  api.py  fastapi_routes.py  models.py
src/ogx_api/interactions/: models.py
src/ogx_api/messages/: __init__.py  api.py  fastapi_routes.py  models.py
src/ogx_api/models/: __init__.py  api.py  fastapi_routes.py  models.py
src/ogx_api/provider/: __init__.py
src/ogx_api/responses/: __init__.py  models.py
src/ogx_api/safety/: fastapi_routes.py
src/ogx_api/shields/: fastapi_routes.py
src/ogx_api/tools/: __init__.py
src/ogx_api/types/: __init__.py
src/ogx_api/vector_io/: models.py
tests/: README.md
tests/integration/: README.md  ci_matrix.json  conftest.py  suites.py
tests/integration/admin/: test_admin.py
tests/integration/agents/: test_openai_responses.py
tests/integration/conversations/: test_openai_conversations.py
tests/integration/fixtures/: common.py
tests/integration/inference/: test_openai_completion.py  test_rerank.py
tests/integration/interactions/: test_interactions.py
tests/integration/messages/: test_message_batches.py
tests/integration/models/: conftest.py  test_models.py
tests/integration/responses/: test_openai_responses.py  test_prompts_access_control.py  test_responses_errors.py
tests/integration/vector_io/: test_openai_vector_stores.py  test_vector_stores_access_control.py
tests/unit/: test_ogx_api_namespaces.py  test_update_constraint_deps.py
tests/unit/cli/: test_stack_config.py  test_stack_lets_go.py  test_stack_list_deps.py  test_stack_run.py
tests/unit/conversations/: test_api_models.py  test_conversations.py
tests/unit/core/: test_client_timeout.py  test_errors.py  test_inference_store_event_loop.py  test_logging_config.py  test_resolver_metadata_store_injection.py  test_sqlstore_event_loop.py  test_stack_validation.py  test_storage_shutdown.py  test_vector_store_config_registration.py
tests/unit/distribution/: test_distribution.py  (+1 more)
(+236 files in other folders)
